# actividad-de-evaluacion

./: .gitignore  README.md  Train_Model.py  model.pkl  pyproject.toml
src/: Train_Model.py  connection_sql_database.py  deployment.py  main.py  model.py  preprocessing.py
src/azure_model_deployment/: api.py  deployment.py  model.pkl  preprocessing.py  score.py
